--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "node_js_course",
   "version": "1.0.0",
   "description": "Node.js project",
+  "type": "module",
   "main": "index.js",
   "devDependencies": {
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "task1": "nodemon task1_runner.js"
   }
 }
