--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "node_js_course",
   "version": "1.0.0",
   "description": "Node.js project",
-  "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "pm2": "^5.3.1"
   },
   "scripts": {
-    "task1": "nodemon task1_runner.js",
-    "task2": "nodemon task2_runner.js",
-    "task3": "nodemon task3.js"
+    "start": "pm2 start server.js",
+    "stop": "pm2 stop server.js"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "dotenv": "^16.4.5",
+    "uuid": "^9.0.1"
   }
 }
