--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "pm2": "^5.3.1"
   },
   "scripts": {
-    "start": "pm2 start server.js",
-    "stop": "pm2 stop server.js"
+    "start": "npx tsc --watch && pm2 start dist/server.js",
+    "stop": "pm2 stop dist/server.js",
+    "build": "npx tsc"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.30",
+    "@types/uuid": "^9.0.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "typescript": "^5.4.3",
     "uuid": "^9.0.1"
   }
 }
