--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.12.11",
     "nodemon": "^3.0.3",
     "pm2": "^5.3.1",
     "ts-node": "^10.9.2"
@@ -20,7 +21,6 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
     "@types/pg": "^8.11.5",
     "@types/uuid": "^9.0.8",
     "bcryptjs": "^2.4.3",
@@ -30,6 +30,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
+    "mysql2": "^3.9.7",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
